[workspace]
resolver = "2"

members = [
    "wie",
    "wie_backend",
    "wie_base",
    "wie_core_arm",
    "wie_core_jvm",
    "wie_impl_java",
    "wie_impl_wipi_c",
    "wie_j2me",
    "wie_ktf",
    "wie_lgt",
    "wie_skt",
    "wie_web",
]

default-members = ["wie"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "^1.0" }
async-trait = { version = "^0.1", default-features = false }
bitflags = { version = "^2.4", default-features = false }
bytemuck = { version = "^1.13", default-features = false, features = [
    "derive",
] }
tracing = { version = "^0.1", default-features = false, features = [
    "attributes",
] }
