[workspace]
resolver = "2"

members = [
    "wie_backend",
    "wie_cli",
    "wie_common",
    "wie_core_arm",
    "wie_core_jvm",
    "wie_wipi_java",
    "wie_wipi_c",
    "wie_j2me",
    "wie_ktf",
    "wie_lgt",
    "wie_skt",
]

default-members = ["wie_cli"]

[profile.dev]
opt-level = 0

[profile.dev.package.wie_core_arm]
opt-level = 1

[profile.dev.package.armv4t_emu]
opt-level = 1

[profile.release]
lto = true

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "^1.0", default-features = false }
async-recursion = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1", default-features = false }
bitflags = { version = "^2.4", default-features = false }
bytemuck = { version = "^1.14", default-features = false, features = ["derive"] }
dyn-clone = { version = "^1.0", default-features = false }
tracing = { version = "^0.1", default-features = false, features = ["attributes"] }

futures-test = { version = "^0.3" }

java_class_proto = { git = "https://github.com/dlunch/RustJava.git" }
java_constants = { git = "https://github.com/dlunch/RustJava.git" }
java_runtime = { git = "https://github.com/dlunch/RustJava.git" }
jvm = { git = "https://github.com/dlunch/RustJava.git" }
jvm_rust = { git = "https://github.com/dlunch/RustJava.git" }

wie_backend = { path = "wie_backend" }
wie_common = { path = "wie_common" }
wie_core_arm = { path = "wie_core_arm" }
wie_core_jvm = { path = "wie_core_jvm" }
wie_wipi_c = { path = "wie_wipi_c" }
wie_wipi_java = { path = "wie_wipi_java" }

test_utils = { path = "test_utils" }
