[package]
name = "test_utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1", default-features = false }

java_class_proto = { git = "https://github.com/dlunch/RustJava.git" }
jvm = { git = "https://github.com/dlunch/RustJava.git" }
jvm_rust = { git = "https://github.com/dlunch/RustJava.git" }

wie_backend = { path = "../wie_backend" }
