[package]
name = "test_utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }

java_class_proto = { workspace = true }
java_runtime = { workspace = true }
jvm = { workspace = true }
jvm_rust = { workspace = true }

wie_backend = { workspace = true }
wie_jvm_support = { workspace = true }
wie_util = { workspace = true }
