[package]
name = "test_utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
spin = { workspace = true }
tracing = { workspace = true }

hashbrown = { version = "^0.17", features = ["default-hasher"], default-features = false }

java_class_proto = { workspace = true }
java_runtime = { workspace = true }
jvm = { workspace = true }
jvm_rust = { workspace = true }

wie_backend = { workspace = true }
wie_jvm_support = { workspace = true }
wie_util = { workspace = true }
wie_wipi_c = { workspace = true }
