[package]
name = "wie"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }

anyhow = { version = "^1.0", features = ["backtrace"] }
clap = { version = "^4.4", features = ["derive"] }
softbuffer = { version = "^0.3" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tao = { version = "^0.22" }

wie_backend = { path = "../wie_backend" }
wie_base = { path = "../wie_base" }
wie_vendor_ktf = { path = "../wie_vendor_ktf" }
wie_vendor_lgt = { path = "../wie_vendor_lgt" }
wie_vendor_skt = { path = "../wie_vendor_skt" }
