[package]
name = "wie_backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

encoding_rs = { version = "^0.8", features = ["alloc"], default-features = false }
image = { version = "^0.24", features = ["bmp", "png"], default-features = false }
lazy_static = { version = "^1.4", default-features = false }
num-traits = { version = "^0.2", default-features = false }
ab_glyph = { version = "^0.2", features = ["libm"], default-features = false }
zip = { version = "^0.6", features = ["deflate"], default-features = false }

smaf = { git = "https://github.com/dlunch/smaf.git" }
smaf_player = { git = "https://github.com/dlunch/smaf.git" }
