[package]
name = "wie_backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
spin = { workspace = true }
tracing = { workspace = true }

ab_glyph = { version = "^0.2", features = ["libm"], default-features = false }
hashbrown = { version = "^0.15", features = ["default-hasher"], default-features = false }
image = { version = "^0.25", features = ["bmp", "png"], default-features = false }
lazy_static = { version = "^1.5", default-features = false }
num-traits = { version = "^0.2", default-features = false }
zip = { version = "^4.6", features = ["deflate"], default-features = false }

wie_util = { workspace = true }

smaf = { git = "https://github.com/dlunch/smaf.git" }
smaf_player = { git = "https://github.com/dlunch/smaf.git" }
