[package]
name = "wie_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }

anyhow = { version = "^1.0", features = ["backtrace"] }
clap = { version = "^4.5", features = ["derive"] }
directories = { version = "^5.0" }
rodio = { version = "^0.17", default-features = false }
softbuffer = { version = "^0.4" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
winit = { version = "^0.29", features = ["x11", "rwh_06"], default-features = false }

wie_backend = { workspace = true }
wie_j2me = { path = "../wie_j2me" }
wie_ktf = { path = "../wie_ktf" }
wie_lgt = { path = "../wie_lgt" }
wie_skt = { path = "../wie_skt" }
