[package]
name = "wie_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }

anyhow = { version = "^1.0", features = ["backtrace"] }
clap = { version = "^4.5", features = ["derive"] }
directories = { version = "^6.0" }
fast_image_resize = "5.1.2"
rodio = { version = "^0.20", default-features = false }
midir = { version = "^0.10", default-features = false }
softbuffer = { version = "^0.4" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
winit = { version = "^0.30", features = ["x11", "wayland", "rwh_06"], default-features = false }
hqx = { git = "https://github.com/CryZe/wasmboy-rs", tag = "v0.1.3" }

wie_backend = { workspace = true }
wie_util = { workspace = true }

wie_j2me = { path = "../wie_j2me" }
wie_ktf = { path = "../wie_ktf" }
wie_lgt = { path = "../wie_lgt" }
wie_skt = { path = "../wie_skt" }
