[package]
name = "wie_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }

anyhow = { version = "^1.0", features = ["backtrace"] }
clap = { version = "^4.5", features = ["derive"] }
directories = { version = "^6.0" }
fast_image_resize = "5.4.0"
rodio = { version = "^0.21", features = ["playback"] }
midir = { version = "^0.10" }
softbuffer = { version = "^0.4" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
winit = { version = "^0.30", features = ["x11", "wayland"] }
hqx = { git = "https://github.com/CryZe/wasmboy-rs", tag = "v0.1.3" }

wie_backend = { workspace = true }
wie_util = { workspace = true }

wie_j2me = { path = "../wie_j2me" }
wie_ktf = { path = "../wie_ktf" }
wie_lgt = { path = "../wie_lgt" }
wie_skt = { path = "../wie_skt" }
