[package]
name = "wie_core_arm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
spin = { workspace = true }
tracing = { workspace = true }

armv4t_emu = { version = "^0.1" }

wie_backend = { workspace = true }
wie_util = { workspace = true }

[dev-dependencies]
test_utils = { workspace = true }
