[package]
name = "wie_core_arm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
spin = { workspace = true }
tracing = { workspace = true }

arm32_cpu = { git = "https://github.com/dlunch/arm32_cpu.git" }

wie_backend = { workspace = true }
wie_util = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gdbstub = { version = "^0.7" }
gdbstub_arch = { version = "^0.3" }

[dev-dependencies]
test_utils = { workspace = true }
