[package]
name = "wie_core_jvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

jvm = { git = "https://github.com/dlunch/jvm.git" }
jvm_impl = { git = "https://github.com/dlunch/jvm.git" }

wie_backend = { path = "../wie_backend" }
wie_base = { path = "../wie_base" }
