[package]
name = "wie_core_jvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

java_runtime = { git = "https://github.com/dlunch/RustJava.git" }
java_runtime_base = { git = "https://github.com/dlunch/RustJava.git" }
jvm = { git = "https://github.com/dlunch/RustJava.git" }
jvm_impl = { git = "https://github.com/dlunch/RustJava.git" }

wie_backend = { path = "../wie_backend" }
wie_common = { path = "../wie_common" }
wie_wipi_java = { path = "../wie_wipi_java" }
