[package]
name = "wie_impl_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

jvm = { git = "https://github.com/dlunch/jvm.git" }

wie_base = { path = "../wie_base" }
wie_backend = { path = "../wie_backend" }

[dev-dependencies]
futures-test = { version = "^0.3" }
jvm_impl = { git = "https://github.com/dlunch/jvm.git" }
