[package]
name = "wie_impl_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

dyn-clone = { version = "^1.0", default-features = false }

java_runtime = { git = "https://github.com/dlunch/RustJava.git" }
java_runtime_base = { git = "https://github.com/dlunch/RustJava.git" }
jvm = { git = "https://github.com/dlunch/RustJava.git" }

wie_base = { path = "../wie_base" }
wie_backend = { path = "../wie_backend" }

[dev-dependencies]
futures-test = { version = "^0.3" }

jvm_impl = { git = "https://github.com/dlunch/RustJava.git" }

wie_core_jvm = { path = "../wie_core_jvm" }
