[package]
name = "wie_j2me"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

jvm = { workspace = true }

wie_backend = { workspace = true }
wie_jvm_support = { workspace = true }
wie_midp = { workspace = true }
wie_util = { workspace = true }
