[package]
name = "wie_jvm_support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

java_class_proto = { workspace = true }
java_runtime = { workspace = true }
jvm = { workspace = true }
jvm_rust = { workspace = true }

wie_backend = { workspace = true }
wie_midp = { workspace = true }
wie_skvm = { workspace = true }
wie_wipi_java = { workspace = true }
