[package]
name = "wie_ktf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

async-recursion = { version = "^1.0" }

java_class_proto = { git = "https://github.com/dlunch/RustJava.git" }
java_runtime = { git = "https://github.com/dlunch/RustJava.git" }
jvm = { git = "https://github.com/dlunch/RustJava.git" }

wie_backend = { path = "../wie_backend" }
wie_common = { path = "../wie_common" }
wie_core_arm = { path = "../wie_core_arm" }
wie_wipi_c = { path = "../wie_wipi_c" }
wie_wipi_java = { path = "../wie_wipi_java" }

[dev-dependencies]
futures-test = { version = "^0.3" }

test_utils = { path = "../test_utils" }
