[package]
name = "wie_ktf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
dyn-clone = { workspace = true }
tracing = { workspace = true }

async-recursion = { workspace = true }

java_class_proto = { workspace = true }
java_constants = { workspace = true }
java_runtime = { workspace = true }
jvm = { workspace = true }

wie_backend = { workspace = true }
wie_util = { workspace = true }
wie_core_arm = { workspace = true }
wie_wipi_c = { workspace = true }
wie_wipi_java = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }

test_utils = { workspace = true }
