[package]
name = "wie_ktf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

async-recursion = { workspace = true }

java_class_proto = { workspace = true }
java_constants = { workspace = true }
java_runtime = { workspace = true }
jvm = { workspace = true }
wipi_types = { workspace = true, features = ["ktf"] }

wie_backend = { workspace = true }
wie_util = { workspace = true }
wie_core_arm = { workspace = true }
wie_jvm_support = { workspace = true }
wie_midp = { workspace = true }
wie_wipi_c = { workspace = true }
wie_wipi_java = { workspace = true }

[dev-dependencies]
test_utils = { workspace = true }
