[package]
name = "wie_lgt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

elf = { version = "^0.7" }

wie_backend = { workspace = true }
wie_common = { workspace = true }
wie_core_arm = { workspace = true }
wie_wipi_c = { workspace = true }
wie_wipi_java = { workspace = true }
