[package]
name = "wie_skt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

wie_backend = { workspace = true }
wie_jvm_support = { workspace = true }

jvm = { workspace = true }
