[package]
name = "wie_vendor_ktf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

async-recursion = { version = "^1.0" }
num-traits = { version = "^0.2" }

wie_backend = { path = "../wie_backend" }
wie_base = { path = "../wie_base" }
wie_core_arm = { path = "../wie_core_arm" }
wie_wipi_c = { path = "../wie_wipi_c" }
wie_wipi_java = { path = "../wie_wipi_java" }
