[package]
name = "wie_vendor_lgt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

elf = { version = "^0.7" }

wie_backend = { path = "../wie_backend" }
wie_base = { path = "../wie_base" }
wie_core_arm = { path = "../wie_core_arm" }
wie_impl_c = { path = "../wie_impl_c" }
wie_impl_java = { path = "../wie_impl_java" }
