[package]
name = "wie_wipi_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

wie_base = { path = "../wie_base" }
wie_backend = { path = "../wie_backend" }
