[package]
name = "wie_wipi_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

dyn-clone = { version = "^1.0", default-features = false }

java_class_proto = { git = "https://github.com/dlunch/RustJava.git" }
java_constants = { git = "https://github.com/dlunch/RustJava.git" }
java_runtime = { git = "https://github.com/dlunch/RustJava.git" }
jvm = { git = "https://github.com/dlunch/RustJava.git" }

wie_common = { path = "../wie_common" }
wie_backend = { path = "../wie_backend" }

[dev-dependencies]
futures-test = { version = "^0.3" }

test_utils = { path = "../test_utils" }
