[package]
name = "wie_wipi_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }

java_class_proto = { workspace = true }
java_constants = { workspace = true }
java_runtime = { workspace = true }
jvm = { workspace = true }

wie_backend = { workspace = true }
wie_jvm_support = { workspace = true }
wie_midp = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }

jvm_rust = { workspace = true }

test_utils = { workspace = true }
wie_util = { workspace = true }
