[package]
name = "wie_backend"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

image = { version = "^0.24" }
softbuffer = { version = "^0.3" }
winit = { version = "0.28.0", features = ["wayland"] }

wie_base = { path = "../wie_base" }
