[package]
name = "wie_core_arm"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
unicorn-engine = { version = "^2.0" }
capstone = { version = "^0.11" }

wie_backend = { path = "../wie_backend" }
wie_base = { path = "../wie_base" }