[package]
name = "wie_vendor_ktf"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { version = "^2.3", default-features = false }
bytemuck = { workspace = true }
futures = { workspace = true }
num-traits = { version = "^0.2" }
tracing = { workspace = true }

wie_backend = { path = "../wie_backend" }
wie_base = { path = "../wie_base" }
wie_core_arm = { path = "../wie_core_arm" }
wie_wipi_c = { path = "../wie_wipi_c" }
wie_wipi_java = { path = "../wie_wipi_java" }
